--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <!-- <a href="services.html" class="nav-item nav-link">Services</a>
                         <a href="#" class="nav-item nav-link">Service Detail</a>
                         <a href="#" class="nav-item nav-link">About Us</a>
-                        <a href="#" class="nav-item nav-link">Gallery</a>
+                        <a href="#" class="nav-item nav-link">Gallery</a> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -1248,13 +1248,7 @@
                     <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site
                             Name</a>, All right reserved.</span>
                 </div>
-                <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a
-                        class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-                </div>
+                
             </div>
         </div>
     </div>
