--- a/contact.html
+++ b/contact.html
@@ -125,14 +125,14 @@
                                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div> -->
-                        <div class="col-lg-7">
+                        <!-- <div class="col-lg-7">
                             <form action="" class="">
                                 <input type="text" class="w-100 form-control border-0 py-3 mb-4" placeholder="Your Name">
                                 <input type="email" class="w-100 form-control border-0 py-3 mb-4" placeholder="Enter Your Email">
                                 <textarea class="w-100 form-control border-0 mb-4" rows="5" cols="10" placeholder="Your Message"></textarea>
                                 <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Submit</button>
                             </form>
-                        </div>
+                        </div> -->
                         <div class="col-lg-5">
                             <div class="d-flex p-4 rounded mb-4 bg-white">
                                 <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
@@ -141,13 +141,13 @@
                                     <p class="mb-2">123 Street New York.USA</p>
                                 </div>
                             </div>
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
+                            <!-- <div class="d-flex p-4 rounded mb-4 bg-white">
                                 <i class="fas fa-envelope fa-2x text-primary me-4"></i>
                                 <div>
                                     <h4>Mail Us</h4>
                                     <p class="mb-2">info@example.com</p>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="d-flex p-4 rounded bg-white">
                                 <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
                                 <div>
