--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,6 @@
         <h1 class="text-center text-white display-6">Contact</h1>
         <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
             <li class="breadcrumb-item active text-white">Contact</li>
         </ol>
     </div>
@@ -125,14 +124,14 @@
                                 <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
                                 <div>
                                     <h4>Address</h4>
-                                    <p class="mb-2">123 Street New York.USA</p>
+                                    <p class="mb-2">Bharathnagar Durga Mandir, Thanisandra</p>
                                 </div>
                             </div>
                             <div class="d-flex p-4 rounded bg-white flex-fill align-items-center">
                                 <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
                                 <div>
                                     <h4>Telephone</h4>
-                                    <p class="mb-2">(+012) 3456 7890</p>
+                                    <a href="tel:06390406468" class="mb-2 text-dark text-decoration-none">+91 - (639) 040-6468</a>
                                 </div>
                             </div>
                         </div>
@@ -203,11 +202,8 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: 1429 Netus Rd, NY 48247</p>
-                        <p>Email: Example@gmail.com</p>
-                        <p>Phone: +0123 4567 8910</p>
-                        <p>Payment Accepted</p>
-                        <img src="img/payment.png" class="img-fluid" alt="">
+                        <p>Bharathnagar Durga Mandir, Thanisandra</p>
+                        <a href="tel:06390406468" class="text-white text-decoration-none">Phone: +91-(639) 040-6468</a>
                     </div>
                 </div>
             </div>
